--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <p>my name is pramod kumar  mourya</p>
+
+    <p>i am student of b.tech (computer science)</p>
+    <p>i am learning coading</p>
 </body>
 </html>
